Implement waiting property for packets so that only one packet can move in a wire